Moved JupySQL initialisation into a separate notebook (#112)
* Created jupysql_init.ipynb

* Fixing copy/paste error in the jupysql_init.ipynb

* ITDE configuration and control (#113)

* Added ITDE control

* Addressed review comments

* Addressed review comments

* Updated config element names (#119)

* Updated config element names

* Fixing a merge defect

* Addressed the review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -34,19 +34,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38994c13-a7eb-45bb-b0d0-4266830a481d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cd5e24a7-ecde-42cb-bdff-7df4fc4f5c84",
    "metadata": {},
@@ -61,12 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -100,7 +82,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -156,9 +138,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT1}}',\n",
@@ -205,9 +187,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT2}}',\n",
