--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -34,19 +34,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e007de9-7ecf-4bb9-84f1-cfb3688f9dd7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6d11a1d4-051d-4d21-990a-660beaeb8f0c",
    "metadata": {},
@@ -77,7 +64,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -122,7 +109,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyexasol"
+    "from exasol.connections import open_pyexasol_connection\n",
+    "from exasol.language_container_activation import get_activation_sql\n",
+    "\n",
+    "# We will be creating a new database session every time we call the model.\n",
+    "# We will have to activate the language container for each of these sessions.\n",
+    "# Here we will get the activation SQL command.\n",
+    "activation_sql = get_activation_sql(sb_config)"
    ]
   },
   {
@@ -142,11 +135,11 @@
    "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
-    "SELECT {sb_config.SCHEMA}.TE_TEXT_GENERATION_UDF(\n",
+    "SELECT {sb_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{sb_config.TE_BFS_CONN}',\n",
-    "    '{sb_config.TE_TOKEN_CONN}',\n",
-    "    '{sb_config.TE_MODELS_BFS_DIR}',\n",
+    "    '{sb_config.te_bfs_connection}',\n",
+    "    '{sb_config.te_hf_connection}',\n",
+    "    '{sb_config.te_models_bfs_dir}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
@@ -154,7 +147,8 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "    conn.execute(query=activation_sql)\n",
     "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
     "    # The error can be observed at result['ERROR_MESSAGE']\n",
@@ -162,14 +156,6 @@
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30974b1a-a5b5-44d9-97c8-774be0dd4608",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
