--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -60,29 +60,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de9c8ec-5abb-43dd-b32d-a676e0e2a2c6",
-   "metadata": {},
-   "source": [
-    "### Other variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f7b9be4-85ad-46f7-b0a2-51a026856de6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\"\n",
-    "\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f5e952b4-8724-46f9-a15a-7de2f306883f",
    "metadata": {},
    "source": [
@@ -96,12 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -125,7 +97,7 @@
    "outputs": [],
    "source": [
     "# URI of the S3 bucket\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\"\n",
+    "S3_BUCKET_URI=f\"s3://{sb_config.aws_bucket}\"\n",
     "\n",
     "# Path in the S3 bucket where the input data will be uploaded.\n",
     "S3_OUTPUT_PATH = \"ida_dataset_path\"\n",
@@ -167,7 +139,7 @@
     "%%sql column_names <<\n",
     "SELECT COLUMN_NAME\n",
     "FROM SYS.EXA_ALL_COLUMNS\n",
-    "WHERE COLUMN_SCHEMA = '{{sb_config.SCHEMA}}' AND COLUMN_TABLE='{{INPUT_TABLE_NAME}}'"
+    "WHERE COLUMN_SCHEMA = '{{sb_config.db_schema}}' AND COLUMN_TABLE='{{INPUT_TABLE_NAME}}'"
    ]
   },
   {
@@ -196,7 +168,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE VIEW {{sb_config.SCHEMA}}.\"{{INPUT_VIEW_NAME}}\" AS\n",
+    "CREATE OR REPLACE VIEW {{sb_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\" AS\n",
     "SELECT CAST(0 AS INT) AS SAMPLE_ID, {{column_names}} FROM {{INPUT_TABLE_NAME}}"
    ]
   },
@@ -231,15 +203,15 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT \"{{sb_config.SCHEMA}}\".\"SME_TRAIN_WITH_SAGEMAKER_AUTOPILOT\"(\n",
+    "EXECUTE SCRIPT \"{{sb_config.db_schema}}\".\"SME_TRAIN_WITH_SAGEMAKER_AUTOPILOT\"(\n",
     "'{\n",
     "    \"job_name\"                          : \"{{sb_config.JOB_NAME}}\",\n",
-    "    \"aws_credentials_connection_name\"   : \"{{sb_config.SME_AWS_CONN}}\",\n",
-    "    \"aws_region\"                        : \"{{sb_config.AWS_REGION}}\",\n",
-    "    \"iam_sagemaker_role\"                : \"{{sb_config.AWS_ROLE}}\",\n",
+    "    \"aws_credentials_connection_name\"   : \"{{sb_config.sme_aws_connection}}\",\n",
+    "    \"aws_region\"                        : \"{{sb_config.aws_region}}\",\n",
+    "    \"iam_sagemaker_role\"                : \"{{sb_config.aws_role}}\",\n",
     "    \"s3_bucket_uri\"                     : \"{{S3_BUCKET_URI}}\",\n",
     "    \"s3_output_path\"                    : \"{{S3_OUTPUT_PATH}}\",\n",
-    "    \"input_schema_name\"                 : \"{{sb_config.SCHEMA}}\",\n",
+    "    \"input_schema_name\"                 : \"{{sb_config.db_schema}}\",\n",
     "    \"input_table_or_view_name\"          : \"{{INPUT_VIEW_NAME}}\",\n",
     "    \"target_attribute_name\"             : \"{{TARGET_COLUMN}}\",\n",
     "    \"max_candidates\"                    : {{MAX_CANDIDATES}}\n",
@@ -262,7 +234,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "DROP VIEW {{sb_config.SCHEMA}}.\"{{INPUT_VIEW_NAME}}\""
+    "DROP VIEW {{sb_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\""
    ]
   },
   {
@@ -283,10 +255,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT {{sb_config.get(\"SCHEMA\")}}.\"SME_POLL_SAGEMAKER_AUTOPILOT_JOB_STATUS\"(\n",
+    "EXECUTE SCRIPT {{sb_config.db_schema}}.\"SME_POLL_SAGEMAKER_AUTOPILOT_JOB_STATUS\"(\n",
     "    '{{sb_config.JOB_NAME}}',\n",
-    "    '{{sb_config.SME_AWS_CONN}}',\n",
-    "    '{{sb_config.AWS_REGION}}'\n",
+    "    '{{sb_config.sme_aws_connection}}',\n",
+    "    '{{sb_config.aws_region}}'\n",
     ")"
    ]
   },
@@ -318,9 +290,9 @@
     "import os\n",
     "from sagemaker import AutoML\n",
     "\n",
-    "os.environ[\"AWS_DEFAULT_REGION\"] = sb_config.AWS_REGION\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = sb_config.AWS_ACCESS_KEY_ID\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = sb_config.AWS_SECRET_ACCESS_KEY\n",
+    "os.environ[\"AWS_DEFAULT_REGION\"] = sb_config.aws_region\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = sb_config.aws_access_key_id\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = sb_config.aws_secret_access_key\n",
     "\n",
     "automl = AutoML.attach(auto_ml_job_name=sb_config.JOB_NAME)\n",
     "automl.describe_auto_ml_job()"
@@ -345,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws_command = f'aws s3 ls s3://{sb_config.AWS_BUCKET}/{S3_OUTPUT_PATH} --recursive'\n",
+    "aws_command = f'aws s3 ls s3://{sb_config.aws_bucket}/{S3_OUTPUT_PATH} --recursive'\n",
     "!{aws_command}"
    ]
   },
