--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -34,19 +34,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "143f942a-1e7a-43d8-8767-b65636742b7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "226cfcbf-fef1-47ca-9134-4e9dc6f333a9",
    "metadata": {},
@@ -61,12 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -100,7 +82,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -154,9 +136,9 @@
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        NULL\n",
