Utilise the Sagemaker extension wrapper provided by the notebook-connector (#111)
* Using the Sagemaker Extension

* Update exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

* Moved JupySQL initialisation into a separate notebook (#112)

* Created jupysql_init.ipynb

* Fixing copy/paste error in the jupysql_init.ipynb

* ITDE configuration and control (#113)

* Added ITDE control

* Addressed review comments

* Addressed review comments

* Updated config element names (#119)

* Updated config element names

* Fixing a merge defect

* Addressed the review comments

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
@@ -39,29 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edba16c9-cd48-4075-8f7d-d6179dc011a8",
-   "metadata": {},
-   "source": [
-    "### Other variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66f3ee9a-5887-4516-b785-7f3791ec63e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\"\n",
-    "\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bdce84ae-7702-4f3e-b196-a7affcc01182",
    "metadata": {},
    "source": [
@@ -75,12 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -109,7 +81,7 @@
     "ENDPOINT_NAME = \"APSPredictor\"\n",
     "\n",
     "# The EC2 instance type of the endpoint to deploy the Autopilot model to.\n",
-    "INSTANCE_TYPE = \"ml.t3.medium\"\n",
+    "INSTANCE_TYPE = \"ml.m5.large\"\n",
     "\n",
     "# The initial number of instances to run the endpoint on.\n",
     "INSTANCE_COUNT = 1\n",
@@ -129,14 +101,14 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT {{sb_config.SCHEMA}}.\"SME_DEPLOY_SAGEMAKER_AUTOPILOT_ENDPOINT\"(\n",
+    "EXECUTE SCRIPT {{sb_config.db_schema}}.\"SME_DEPLOY_SAGEMAKER_AUTOPILOT_ENDPOINT\"(\n",
     "    '{{sb_config.JOB_NAME}}', \n",
     "    '{{ENDPOINT_NAME}}', \n",
-    "    '{{sb_config.SCHEMA}}',\n",
+    "    '{{sb_config.db_schema}}',\n",
     "    '{{INSTANCE_TYPE}}',  \n",
     "    {{INSTANCE_COUNT}}, \n",
-    "    '{{sb_config.AWS_CONN}}', \n",
-    "    '{{sb_config.AWS_REGION}}'\n",
+    "    '{{sb_config.sme_aws_connection}}', \n",
+    "    '{{sb_config.aws_region}}'\n",
     ");"
    ]
   },
@@ -158,7 +130,7 @@
     "%%sql\n",
     "SELECT SCRIPT_NAME, SCRIPT_TYPE \n",
     "FROM SYS.EXA_ALL_SCRIPTS\n",
-    "WHERE SCRIPT_SCHEMA='{{sb_config.SCHEMA}}' AND SCRIPT_TYPE = 'UDF'"
+    "WHERE SCRIPT_SCHEMA='{{sb_config.db_schema}}' AND SCRIPT_TYPE = 'UDF'"
    ]
   },
   {
@@ -183,7 +155,7 @@
     "%%sql column_names <<\n",
     "SELECT COLUMN_NAME\n",
     "FROM SYS.EXA_ALL_COLUMNS\n",
-    "WHERE COLUMN_SCHEMA = '{{sb_config.SCHEMA}}' AND COLUMN_TABLE='{{TEST_TABLE_NAME}}' AND COLUMN_NAME <> UPPER('{{TARGET_COLUMN}}');"
+    "WHERE COLUMN_SCHEMA = '{{sb_config.db_schema}}' AND COLUMN_TABLE='{{TEST_TABLE_NAME}}' AND COLUMN_NAME <> UPPER('{{TARGET_COLUMN}}');"
    ]
   },
   {
@@ -212,8 +184,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT \"{{sb_config.SCHEMA}}\".\"{{ENDPOINT_NAME}}\"(0, {{column_names}})\n",
-    "FROM \"{{sb_config.SCHEMA}}\".\"{{TEST_TABLE_NAME}}\"\n",
+    "SELECT \"{{sb_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(0, {{column_names}})\n",
+    "FROM \"{{sb_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
     "LIMIT 10"
    ]
   },
@@ -236,12 +208,12 @@
     "WITH TEST_DATA AS\n",
     "(\n",
     "    -- We take data from the test table and add the row number calling it SAMPLE_ID.\n",
-    "    SELECT ROW_NUMBER() OVER () AS SAMPLE_ID, {{column_names}}, [{{TARGET_COLUMN}}] FROM \"{{sb_config.SCHEMA}}\".\"{{TEST_TABLE_NAME}}\"\n",
+    "    SELECT ROW_NUMBER() OVER () AS SAMPLE_ID, {{column_names}}, [{{TARGET_COLUMN}}] FROM \"{{sb_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
     ")\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    -- Make predictions. We will pass the SAMPLE_ID that sould be returned back unchanged.\n",
-    "    SELECT \"{{sb_config.SCHEMA}}\".\"{{ENDPOINT_NAME}}\"(SAMPLE_ID, {{column_names}})\n",
+    "    SELECT \"{{sb_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(SAMPLE_ID, {{column_names}})\n",
     "    FROM TEST_DATA\n",
     ")\n",
     "-- Finally, compute the confusion matrix.\n",
@@ -270,8 +242,8 @@
     "%%sql\n",
     "EXECUTE SCRIPT SME_DELETE_SAGEMAKER_AUTOPILOT_ENDPOINT(\n",
     "    '{{ENDPOINT_NAME}}', \n",
-    "    '{{sb_config.AWS_CONN}}', \n",
-    "    '{{sb_config.AWS_REGION}}'\n",
+    "    '{{sb_config.sme_aws_connection}}', \n",
+    "    '{{sb_config.aws_region}}'\n",
     ")"
    ]
   },
