Utilize Transformers Extension Wrapper provided by the notebook-connector (#109)
* Added generic_config_ui.ipynb

* Utilise the Sagemaker extension wrapper provided by the notebook-connector (#111)

* Using the Sagemaker Extension

* Update exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

* Moved JupySQL initialisation into a separate notebook (#112)

* Created jupysql_init.ipynb

* Fixing copy/paste error in the jupysql_init.ipynb

* ITDE configuration and control (#113)

* Added ITDE control

* Addressed review comments

* Addressed review comments

* Updated config element names (#119)

* Updated config element names

* Fixing a merge defect

* Addressed the review comments

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08f75a9a-f769-4703-a950-9832a4ca55b6",
+   "id": "0de3cdb5-e08a-426e-a59a-c8f8ef70172f",
    "metadata": {},
    "source": [
-    "# AWS Credentials UI\n",
+    "# Huggingface credentials UI\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>"
    ]
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f259f07-a801-415e-904f-de9a0589aeb7",
+   "id": "e64d54af-2c5e-40c3-8503-ef24c1f18869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,27 +28,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3d13c6-e8cc-4f3c-8f01-f9622223503e",
+   "id": "152c5d14-7596-436e-85f5-f7a1d7f25f09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from enum import Enum\n",
     "import ipywidgets as widgets\n",
     "\n",
     "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
-    "def get_sme_config_ui() -> widgets.Widget:\n",
+    "def get_te_config_ui() -> widgets.Widget:\n",
     "\n",
     "    inputs = [\n",
-    "        ('Access Key ID', widgets.Password(value=sb_config.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
-    "        ('Secret Access Key', widgets.Password(value=sb_config.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
-    "        ('Region', widgets.Text(value=sb_config.get(CKey.aws_region)), CKey.aws_region),\n",
-    "        ('Role', widgets.Text(value=sb_config.get(CKey.aws_role)), CKey.aws_role),\n",
-    "        ('S3 Bucket', widgets.Text(value=sb_config.get(CKey.aws_bucket)), CKey.aws_bucket),\n",
+    "        ('Access token', widgets.Password(value=sb_config.get(CKey.huggingface_token)), CKey.huggingface_token)\n",
     "    ]\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, [inputs], ['AWS Access Parameters'])\n"
+    "    return get_generic_config_ui(sb_config, [inputs], ['Huggingface Access Parameters'])\n"
    ]
   }
  ],
