--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
@@ -36,27 +36,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model_udf(model_name: str, conf: \"Secrets\") -> None:\n",
+    "def load_huggingface_model_udf(model_name: str) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS using a UDF provided with the Transformer Extension.\n",
+    "    There must be a global variable - sb_config - providing access to the secret store holding\n",
+    "    the configuration data.\n",
     "\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
-    "    conf           - Sandbox configuration object.\n",
     "    \"\"\"\n",
     "\n",
-    "    import pyexasol\n",
+    "    from exasol.connections import open_pyexasol_connection\n",
+    "    from exasol.language_container_activation import get_activation_sql\n",
+    "    from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    sql = f\"\"\"\n",
-    "    SELECT {sb_config.SCHEMA}.TE_MODEL_DOWNLOADER_UDF(\n",
+    "    SELECT {sb_config.get(CKey.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
     "        '{model_name}',\n",
-    "        '{sb_config.TE_MODELS_BFS_DIR}',\n",
-    "        '{sb_config.TE_BFS_CONN}',\n",
-    "        '{sb_config.TE_TOKEN_CONN}'\n",
+    "        '{sb_config.get(CKey.te_models_bfs_dir)}',\n",
+    "        '{sb_config.get(CKey.te_bfs_connection)}',\n",
+    "        '{sb_config.get(CKey.te_hf_connection)}'\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
-    "    dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "    with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "    with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "        conn.execute(query=get_activation_sql(sb_config))\n",
     "        conn.execute(query=sql)"
    ]
   },
@@ -77,38 +80,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model_cli(model_name: str, conf: \"Secrets\", force_download: bool = False) -> None:\n",
+    "def load_huggingface_model_cli(model_name: str, force_download: bool = False) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS by saving it first to a local drive, as per the command-line interface.\n",
+    "    There must be a global variable - sb_config - providing access to the secret store holding\n",
+    "    the configuration data.\n",
     "\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
-    "    conf           - Sandbox configuration object.\n",
     "    force_download - If True the model will be reloaded from the hub even if it has been cached before.\n",
     "    \"\"\"\n",
     "\n",
     "    from pathlib import Path\n",
     "    import re\n",
-    "    from transformers import AutoTokenizer, AutoModel\n",
-    "    from exasol_transformers_extension.utils.bucketfs_operations import (\n",
-    "        create_bucketfs_location, get_model_path, upload_model_files_to_bucketfs)\n",
+    "    from exasol.transformers_extension_wrapper import upload_model\n",
+    "    from exasol.ai_lab_config import AILabConfig as Cfg\n",
     "\n",
     "    # Make a name for the model sub-directory\n",
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
-    "    model_dir = str(Path(conf.get('TE_MODELS_CACHE_DIR')) / sub_dir)\n",
-    "    \n",
-    "    # Maybe download the model from the Huggingface hub\n",
-    "    AutoTokenizer.from_pretrained(model_name, cache_dir=model_dir, token=sb_config.TE_TOKEN, force_download=force_download)\n",
-    "    AutoModel.from_pretrained(model_name, cache_dir=model_dir, token=sb_config.TE_TOKEN, force_download=force_download)\n",
+    "    models_dir = sb_config.get(CKey.te_models_cache_dir)\n",
+    "    cache_dir = str(Path(models_dir) / sub_dir)\n",
     "\n",
-    "    # Create bucketfs location\n",
-    "    bucketfs_location = create_bucketfs_location(\n",
-    "        conf.get('BUCKETFS_SERVICE'), conf.get('EXTERNAL_HOST_NAME'), int(conf.get('BUCKETFS_PORT')),\n",
-    "        conf.get('BUCKETFS_USE_HTTPS').lower() == 'true', conf.get('BUCKETFS_USER'), conf.get('BUCKETFS_PASSWORD'), \n",
-    "        conf.get('BUCKETFS_BUCKET'), conf.get('TE_BFS_DIR'))\n",
-    "\n",
-    "    # Upload the downloaded model files into bucketfs\n",
-    "    upload_path = get_model_path(conf.get('TE_MODELS_BFS_DIR'), model_name)\n",
-    "    upload_model_files_to_bucketfs(model_dir, upload_path, bucketfs_location)"
+    "    # Upload it to the BucketFS\n",
+    "    upload_model(sb_config, model_name=model_name, cache_dir=cache_dir, force_download=force_download)"
    ]
   },
   {
@@ -128,26 +121,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model(model_name: str, conf: \"Secrets\", method: str = None, force_download: bool = False) -> None:\n",
+    "def load_huggingface_model(model_name: str, method: str = 'cli', force_download: bool = False) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS choosing one of the two available methods.\n",
     "\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
-    "    conf           - Sandbox configuration object.\n",
     "    method         - The recognized values are \"udf\" and \"cli\". If the parameter is not set then\n",
     "                     will look for method selection in the configuration. That failed the CLI method\n",
     "                     is used. \n",
     "    force_download - If True the model will be reloaded from the hub even if it has been cached before.\n",
     "    \"\"\"\n",
     "\n",
-    "    if not method:\n",
-    "        method = conf.get('TE_LOAD_METHOD')\n",
-    "    if method:\n",
-    "        method = method.lower()\n",
+    "    method = method.lower()\n",
     "    if method == 'udf':\n",
-    "        load_huggingface_model_udf(model_name, conf)\n",
+    "        load_huggingface_model_udf(model_name)\n",
     "    else:\n",
-    "        load_huggingface_model_cli(model_name, conf, force_download=force_download)"
+    "        load_huggingface_model_cli(model_name, force_download=force_download)"
    ]
   },
   {
