Moving helper notebooks and erasing the name "sandbox" (#103)
* Moved helper notebooks to utils

* Fixed an integration test

* Updated the rest of the notebooks

* experiment regarding .gitattributes

* test 2

* test 3

* removed experiment

* Removing the word sandbox from references to config page

* Generic config UI (#106)

* Added generic_config_ui.ipynb

* Addressed the review comments

* Utilize Transformers Extension Wrapper provided by the notebook-connector (#109)

* Added generic_config_ui.ipynb

* Utilise the Sagemaker extension wrapper provided by the notebook-connector (#111)

* Using the Sagemaker Extension

* Update exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

* Moved JupySQL initialisation into a separate notebook (#112)

* Created jupysql_init.ipynb

* Fixing copy/paste error in the jupysql_init.ipynb

* ITDE configuration and control (#113)

* Added ITDE control

* Addressed review comments

* Addressed review comments

* Updated config element names (#119)

* Updated config element names

* Fixing a merge defect

* Addressed the review comments

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

---------

Co-authored-by: ckunki <christoph.kuhnke@exasol.com>
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -121,15 +121,15 @@
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "\n",
     "    # Create tables\n",
-    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.db_schema}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
     "    conn.execute(query=sql)\n",
-    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{test_table}\" LIKE \"{sb_config.SCHEMA}\".\"{train_table}\"'\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.db_schema}\".\"{test_table}\" LIKE \"{sb_config.db_schema}\".\"{train_table}\"'\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "    # Import data into Exasol\n",
-    "    conn.import_from_pandas(df_train, (sb_config.SCHEMA, train_table))\n",
+    "    conn.import_from_pandas(df_train, (sb_config.db_schema, train_table))\n",
     "    print(f\"Imported {conn.last_statement().rowcount()} rows into {train_table}.\")\n",
-    "    conn.import_from_pandas(df_test, (sb_config.SCHEMA, test_table))\n",
+    "    conn.import_from_pandas(df_test, (sb_config.db_schema, test_table))\n",
     "    print(f\"Imported {conn.last_statement().rowcount()} rows into {test_table}.\")\n",
     "\n",
     "print(f\"Importing the data took: {stopwatch}\")"
