--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -16,7 +16,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Load the Abalone data](../data/data_abalone.ipynb).\n",
     "\n",
     "## Setup\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -59,7 +59,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'ABALONE_TRAIN'))\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
