--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -55,7 +55,7 @@
     "\n",
     "target_column = 'RINGS'\n",
     "bfs_model_path = get_udf_bucket_path(sb_config) + '/abalone_svm_model.pkl'\n",
-    "params = {'schema': sb_config.SCHEMA, 'test_table': 'ABALONE_TEST', 'model_path': bfs_model_path}\n",
+    "params = {'schema': sb_config.db_schema, 'test_table': 'ABALONE_TEST', 'model_path': bfs_model_path}\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
