--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -105,7 +105,7 @@
     "\"\"\")\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql, query_params={'schema': sb_config.SCHEMA})\n",
+    "    conn.execute(query=sql, query_params={'schema': sb_config.db_schema})\n",
     "\n",
     "print(f\"Creating prediction script took: {stopwatch}\")"
    ]
