--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -16,7 +16,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb).\n",
     "\n",
     "## Setup\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -58,7 +58,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'TELESCOPE_TRAIN'))\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'TELESCOPE_TRAIN'))\n",
     "\n",
     "print(f\"Loading the data took: {stopwatch}\")"
    ]
