--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
     "## Set up\n",
@@ -29,21 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "143f942a-1e7a-43d8-8767-b65636742b7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -61,12 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -99,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "%run utils/model_retrieval.ipynb\n",
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -154,9 +136,9 @@
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        NULL\n",
