Removing the word sandbox from references to config page

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
@@ -22,7 +22,8 @@
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for the styles NB from the current directory upwards.\n",
     "\n",
-    "%run {upward_file_search('utils/ui_styles.ipynb')}"
+    "%run {upward_file_search('utils/ui_styles.ipynb')}\n",
+    "%run {upward_file_search('utils/popup_message_ui.ipynb')}"
    ]
   },
   {
@@ -35,14 +36,12 @@
     "from enum import Enum\n",
     "from pathlib import Path\n",
     "import ipywidgets as widgets\n",
-    "    \n",
+    "\n",
     "from exasol.secret_store import Secrets\n",
     "\n",
     "\n",
     "def get_access_store_ui(root_dir: str = '.') -> widgets.Widget:\n",
     "\n",
-    "    from IPython.display import Javascript, display, clear_output\n",
-    "    \n",
     "    # Try to find the file name in the shared store.\n",
     "    # Create a global variable only temporarily.\n",
     "    %store -r\n",
@@ -61,15 +60,6 @@
     "    file_txt = widgets.Text(value=sb_store_file_, style=ui_look.input_style, layout=ui_look.input_layout)\n",
     "    password_txt = widgets.Password(style=ui_look.input_style, layout=ui_look.input_layout)\n",
     "    open_btn = widgets.Button(description='Open', style=ui_look.button_style, layout=ui_look.button_layout)\n",
-    "\n",
-    "    # Prepare to display an error message\n",
-    "    notify_output = widgets.Output()\n",
-    "    display(notify_output)\n",
-    "\n",
-    "    @notify_output.capture()\n",
-    "    def popup_message(message):\n",
-    "        clear_output()\n",
-    "        display(Javascript(f\"alert('{message}')\"))\n",
     "\n",
     "    def open_or_create_config_store(btn):\n",
     "        global sb_config, sb_store_file\n",
