--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This set of notebooks demonstrates the use case of uploading an externally trained prediction model into the database. In this particular scenario, a regression or classification model is trained using the [scikit-learn](https://scikit-learn.org/stable/) library. The trained scikiit_learn model is then uploaded into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) and used for making predictions.\n",
+    "This set of notebooks demonstrates the use case of uploading an externally trained prediction model into Exasol database. In this particular scenario, a regression or classification model is trained using the [scikit-learn](https://scikit-learn.org/stable/) library. The trained scikiit_learn model is then uploaded into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) and used for making predictions.\n",
     "\n",
     "The prediction is made for each row in a \"test\" database. The computation is invoked by a [UDF](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm). If the database has multiple nodes the test rows would be evenly distributed across the nodes. The UDF making the predictions runs on all these nodes in parallel, each node computing its portion of the test data. This parallelization results in the reduction of overall computation time by the factor equal to the number of nodes.\n",
     "\n",
