--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "The prediction is made for each row in a \"test\" database. The computation is invoked by a user defined function ([UDF](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm)). If the database has multiple nodes the test rows would be evenly distributed across the nodes. The UDF making the predictions runs on all these nodes in parallel, each node computing its portion of the test data. This parallelization results in the reduction of overall computation time by the factor equal to the number of nodes.\n",
     "\n",
-    "For the prediction UDF The scikit-learn model is an arbitrary object that supports the `predict` method. It can just as well be a pipeline including some pre-processing and/or post-processing steps.\n",
+    "For the prediction UDF the scikit-learn model is an arbitrary object that supports the `predict` method. It can just as well be a pipeline including some pre-processing and/or post-processing steps.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
