--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## Content\n",
     "\n",
-    "This section consists of two tutorials, covering one classification and one regression problem. Please note that the tutorials are focused on showing the in-database prediction. It is not our goal to present the best ML practices. For the sake of clarity, we perform only very basic ML pre-processing and performance analysis.\n",
+    "This section consists of two tutorials, covering one classification and one regression problem. Please note that the tutorials focus on showing the in-database prediction rather than presenting best ML practices. For the sake of clarity, we perform only very basic ML pre-processing and performance analysis.\n",
     "\n",
     "The first notebook to run is the one that creates a [prediction UDF](./sklearn_predict_udf.ipynb).\n",
     "\n",
