--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -29,7 +29,7 @@
     "This shall be followed by the two tutorials in any order.\n",
     "\n",
     "- [Solving classification problem (MAGIC Gamma Telescope)](./sklearn_train_telescope.ipynb).\n",
-    "- [Solving regression problem (Abalone](./sklearn_train_abalone.ipynb).\n",
+    "- [Solving regression problem (Abalone)](./sklearn_train_abalone.ipynb).\n",
     "\n"
    ]
   },
