Renamed get_config_ui to get_db_config_ui

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_config_ui())"
+    "display(get_db_config_ui())"
    ]
   },
   {
