--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "\n",
     "\n",
-    "def get_config_ui() -> widgets.Widget:\n",
+    "def get_db_config_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a db configuration UI, depending on the choice of the database.\n",
     "    \"\"\"\n",
