#121: Updating the ITDE management UI (#122)
* Updated python dependencies for Jupyter
* Added git to Ubuntu dependencies of the Jupyter Ansible role

Co-authored-by: Torsten Kilias <torsten.kilias@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -23,7 +23,8 @@
     "# Need to search for other supporting NBs from the current directory upwards.\n",
     "\n",
     "%run {upward_file_search('utils/ui_styles.ipynb')}\n",
-    "%run {upward_file_search('utils/generic_config_ui.ipynb')}"
+    "%run {upward_file_search('utils/generic_config_ui.ipynb')}\n",
+    "%run {upward_file_search('utils/popup_message_ui.ipynb')}"
    ]
   },
   {
@@ -33,15 +34,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
     "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "import ipywidgets as widgets\n",
+    "\n",
+    "from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "from exasol.itde_manager import (bring_itde_up, is_itde_running, start_itde, take_itde_down)\n",
+    "\n",
+    "\n",
+    "class ITDEStatus(Enum):\n",
+    "    \"\"\"\n",
+    "    Display status of the Docker-DB\n",
+    "    \"\"\"\n",
+    "    running = 'Docker-DB is RUNNING'\n",
+    "    stopped = 'Docker-DB is STOPPED'\n",
+    "    missing = 'Docker-DB is NOT CREATED'\n",
     "\n",
     "\n",
     "def get_db_selection_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a UI form for choosing between the Docker-DB and a customer database.\n",
     "\n",
-    "    There should be a global variable `sb_config` referencing a configuration store object.\n",
+    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    ui_look = get_config_styles()\n",
@@ -74,7 +88,7 @@
     "    \"\"\"\n",
     "    Creates a UI form for editing a customer database configuration.\n",
     "    \n",
-    "    There should be a global variable `sb_config` referencing a configuration store object.\n",
+    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    inputs = [\n",
@@ -115,7 +129,7 @@
     "    \"\"\"\n",
     "    Creates a UI form for editing the Docker-DB configuration.\n",
     "\n",
-    "    There should be a global variable `sb_config` referencing a configuration store object.\n",
+    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    inputs = [\n",
@@ -132,7 +146,7 @@
     "\n",
     "\n",
     "\n",
-    "def get_config_ui() -> widgets.Widget:\n",
+    "def get_db_config_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a db configuration UI, depending on the choice of the database.\n",
     "    \"\"\"\n",
@@ -143,46 +157,124 @@
     "        return get_custom_db_config_ui()\n",
     "\n",
     "\n",
+    "def _get_docker_db_action_buttions(itde_exists: bool, itde_running: bool, \n",
+    "                                   display_status: widgets.Widget) -> List[widgets.Button]:\n",
+    "    \"\"\"\n",
+    "    Creates one or two action buttons with the correspondent on_click functions for managing the\n",
+    "    Docker-DB. Depending on the current status (idte_exists, itde_running) of the docker container,\n",
+    "    the \"Start\", \"Restart\" or both buttons are created.\n",
+    "    When the action is completed successfully, the running status is displayed in the provided\n",
+    "    widget (display_status).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def start_docker_db(btn):\n",
+    "        popup_message('Will start the DockerDB')\n",
+    "        try:\n",
+    "            # Need to check if the Docker-DB still exists and not running because\n",
+    "            # the situation might have changed while the the widgets were hanging around.\n",
+    "            itde_exists_now, itde_running_now = is_itde_running(sb_config)\n",
+    "            if not itde_running_now:\n",
+    "                if itde_exists_now:\n",
+    "                    start_itde(sb_config)\n",
+    "                else:\n",
+    "                    bring_itde_up(sb_config)\n",
+    "            # Indicate the successful completion.\n",
+    "            display_status.value = ITDEStatus.running.value\n",
+    "            btn.icon = 'check'\n",
+    "        except Exception as e:\n",
+    "             popup_message('Failed to start the Docker-DB:' + str(e))\n",
+    "       \n",
+    "    def restart_docker_db(btn):\n",
+    "        try:\n",
+    "            # Need to check again if the Docker-DB exists or not because\n",
+    "            # the situation might have changed while the widgets were hanging around.\n",
+    "            itde_exists_now, _ = is_itde_running(sb_config)\n",
+    "            if itde_exists_now:\n",
+    "                take_itde_down(sb_config)\n",
+    "            bring_itde_up(sb_config)\n",
+    "            # Indicate the successful completion.\n",
+    "            display_status.value = ITDEStatus.running.value\n",
+    "            btn.icon = 'check'\n",
+    "        except Exception as e:\n",
+    "             popup_message('Failed to restart the Docker-DB:' + str(e))\n",
+    "\n",
+    "    if itde_running:\n",
+    "        btn_restart = widgets.Button(description='Recreate and Start')\n",
+    "        btn_restart.on_click(restart_docker_db)\n",
+    "        return [btn_restart]\n",
+    "    elif itde_exists:\n",
+    "        btn_start = widgets.Button(description='Start')\n",
+    "        btn_start.on_click(start_docker_db)\n",
+    "        btn_restart = widgets.Button(description='Recreate and Start')\n",
+    "        btn_restart.on_click(restart_docker_db)\n",
+    "        return [btn_start, btn_restart]\n",
+    "    else:\n",
+    "        btn_start = widgets.Button(description='Create and Start')\n",
+    "        btn_start.on_click(start_docker_db)\n",
+    "        return [btn_start]\n",
+    "\n",
+    "\n",
     "def get_start_docker_db_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    A UI for starting or restarting the Docker-DB.\n",
-    "    It checks if an instance of the Docker-DB is already running. If it is, a warning is displayed.\n",
-    "    An existing instance will be shut down before a new one is created.\n",
+    "    It checks if an instance of the Docker-DB is already running or if it exists. In that case\n",
+    "    a warning is displayed.\n",
     "\n",
-    "    There should be a global variable `sb_config` referencing a configuration store object.\n",
+    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    if sb_config.get(CKey.use_itde) != 'True':\n",
     "        return None\n",
     "\n",
-    "    from exasol.itde_manager import (bring_itde_up, is_itde_running, take_itde_down)\n",
-    "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
-    "    is_running = is_itde_running(sb_config)\n",
+    "    # Get the current status of the Docker-DB.\n",
+    "    itde_exists, itde_running = is_itde_running(sb_config)\n",
     "\n",
-    "    header_text = 'Restarting Docker-DB' if is_running else 'Starting Docker-DB'\n",
-    "    header_lbl = widgets.Label(value=header_text, style=ui_look.header_style, layout=ui_look.header_layout)\n",
-    "        \n",
-    "    run_btn = widgets.Button(description='Run', style=ui_look.button_style, layout=ui_look.button_layout)\n",
-    "\n",
-    "    def run_itde(btn):\n",
-    "        if is_itde_running(sb_config):\n",
-    "            take_itde_down(sb_config)\n",
-    "        bring_itde_up(sb_config)\n",
-    "        btn.icon = 'check'\n",
-    "\n",
-    "    run_btn.on_click(run_itde)\n",
-    "\n",
+    "    # Display the status.\n",
+    "    header_lbl = widgets.Label(style=ui_look.header_style, layout=ui_look.header_layout)\n",
+    "    if itde_running:\n",
+    "        header_lbl.value = ITDEStatus.running.value\n",
+    "    elif itde_exists:\n",
+    "        header_lbl.value = ITDEStatus.stopped.value\n",
+    "    else:\n",
+    "        header_lbl.value = ITDEStatus.missing.value\n",
     "    group_items = [header_lbl]\n",
-    "    if is_running:\n",
-    "        warning_text = 'Please note that all data stored in the currently running instance of the database will be lost!'\n",
-    "        warning_html = widgets.HTML(value= '<style>p{word-wrap: break-word}</style><p>' + warning_text +' </p>')\n",
+    "        \n",
+    "    # Add a warning message about recreating an existing Docker-DB.\n",
+    "    if itde_exists:\n",
+    "        warning_text = 'Please note that recreating the Docker-DB will result in the loss of all data stored in the ' \\\n",
+    "            f'{\"running\" if itde_running else \"existing\"} instance of the database!'\n",
+    "        warning_html = widgets.HTML(value= '<style>p.itde_warning{word-wrap: break-word; color: red;}</style>' \\\n",
+    "                                    '<p class=\"itde_warning\">' + warning_text + ' </p>')\n",
     "        group_items.append(widgets.Box([warning_html], layout=ui_look.row_layout))\n",
-    "    items = [widgets.Box(group_items, layout=ui_look.group_layout), run_btn]\n",
+    "\n",
+    "    # Create action buttons.\n",
+    "    action_buttons = _get_docker_db_action_buttions(itde_exists, itde_running, header_lbl)\n",
+    "    for btn in action_buttons:\n",
+    "        btn.style = ui_look.button_style\n",
+    "        btn.layout = ui_look.button_layout\n",
+    "\n",
+    "    # Put all UI elements together.\n",
+    "    items = [widgets.Box(group_items, layout=ui_look.group_layout),\n",
+    "             widgets.Box(action_buttons, layout=ui_look.row_layout)]\n",
     "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
     "    return ui\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e201faac-13f7-4562-857c-0e89f6cf1a0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1482248-0f26-4975-8500-ba9cc95b6f5f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
