--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "The extension requires a number of initialization steps.\n",
-    "Please proceed to the [extension initialization](sme_int.ipynb) notebook."
+    "Please proceed to the [extension initialization](sme_init.ipynb) notebook."
    ]
   },
   {
