--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
@@ -93,7 +93,7 @@
     "    from pathlib import Path\n",
     "    import re\n",
     "    from exasol.transformers_extension_wrapper import upload_model\n",
-    "    from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "    from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    # Make a name for the model sub-directory\n",
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
